<resources>
    <string name="app_name">Universe Watchers</string>
    <string name="title_explore">Explore</string>
    <string name="subtitle_explore">Newest pictures from NASA</string>
    <string name="title_collections">My Collection</string>
    <string name="title_community">Community</string>
    <string name="title_about">About</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="title_activity_resetpassword">Reset password</string>

    <!-- Strings related to sign in -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in / register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="error_authentication">Email already in use. Forgot your password?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="action_reset_password">Send reset link</string>
    <string name="reset_send">A reset link has been send to your e-mail.</string>

    <!-- Strings related to an item -->
    <string name="placeholder_photo_title">Title of this photo</string>
    <string name="placeholder_photo_explanation">Some explanation about this image.</string>
    <string name="placeholder_photo_date">0000–00–00</string>
    <string name="photo_saved">Saved this photo to your collection</string>
    <string name="unsave_photo">Do you want to remove this image from your collection?</string>
    <string name="label_delete">Remove</string>
    <string name="label_cancel">Cancel</string>

    <!-- Strings related to a user -->
    <string name="placeholder_name">Collection of a user…</string>
    <string name="action_set_username">Change username</string>
    <string name="title_rename">Choose a username…</string>
    <string name="label_ok">Ok</string>

    <string name="error_no_posts">You have no images in your collection yet. Add them from the \'explore\' page.</string>
    <string name="error_network">No information found. Make sure your device has a network connection.</string>

</resources>
